# OpenCV

./:  CodeExp.md
UsePointerAccessPixel/: CMakeLists.txt
skin_detection/: CMakeLists.txt
skin_detection/src/: skin_detection.cpp
test/:  CodeExp.md  CMakeLists.txt
